src/tests/basic/semantics/test_condition_nonboolean_errors.diag
tests/basic/semantics/test_condition_nonboolean_errors.bas:5:7: error[E1001]: Expected BOOLEAN condition, got FLOAT. Suggestion: use 3.14 <> 0.
WHILE 3.14
      ^
